Lab08/06-ingress/02_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress02
spec:
  rules:
  - host: customers.educalabs.com.pe
    http:
      paths:
      - path: /customers
        pathType: Exact
        backend:
          serviceName: lab01
          servicePort: 7070
      - path: "/correlations/*"
        pathType: Prefix
        backend:
            serviceName: lab02
            servicePort: 7071
  - host: correlations.educalabs.com.pe
    http:
      paths:
      - path: "/correlations/*"
        pathType: Prefix
        backend:
            serviceName: lab02
            servicePort: 7071         
  - host: security.educalabs.com.pe
    http:
      paths:      
      - path: "/oauth/*"
        pathType: Prefix
        backend:
          serviceName: lab05
          servicePort: 9999
