Lab08/06-ingress/05_ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress02
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /customers
        pathType: Exact
        backend:
          serviceName: lab01
          servicePort: 7070
      - path: "/correlations/*"
        pathType: Prefix
        backend:
            serviceName: lab02
            servicePort: 7071
  - http:
      paths:
      - path: "/correlations/*"
        pathType: Prefix
        backend:
            serviceName: lab02
            servicePort: 7071         
  - http:
      paths:      
      - path: "/oauth/*"
        pathType: Prefix
        backend:
          serviceName: lab05
          servicePort: 9999
